Overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@
 
 body {
   font-size: 18px;
+  max-width: 100%;
   overflow-x: hidden;
 }
 
